[package]
name = "tuix_audio_nodes"
version = "0.1.0"
authors = ["geom3trik <geomyles@yahoo.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tuix = {path = "../tuix"}
tuix = { git = "https://github.com/geom3trik/tuix", branch = "experiment" }
femtovg = { git = "https://github.com/femtovg/femtovg", branch = "master" }
rand = "*"